# RISC-V-vit.cpp

./: .gitmodules  CMakeLists.txt  README.md  alloc_compat.c  ccp_runtime.c  convert-pth-to-ggml.py  count_params.py  crt.S  get_labs.py  link.ld  main.cpp  quantisized.py  quantize.cpp  semihost-sys_fdtable.c  semihost-sys_lseek.c  semihost-sys_read.c  start.c  sys_sbrk.c  toolchain-riscv64-baremetal.cmake  train.py  uart.c  vit.cpp  vit.h  vit.py
extensions/vitstr.cpp/: CMakeLists.txt
ggml/: CMakeLists.txt
ggml/examples/: stb_image.h
ggml/src/: CMakeLists.txt  ggml-quants.c  ggml.c
ggml/tests/: CMakeLists.txt
